# matrix-sdk-crypto-wasm

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  index.d.ts  index_extras.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cargo/: config.toml
.github/: latest_matrix_sdk_failed_issue_template.md  zizmor.yml
.github/workflows/: ci.yml  latest-matrix-sdk-crypto.yml  netlify.yaml  release.yml  zizmor.yml
src/: attachment.rs  backup.rs  dehydrated_devices.rs  device.rs  encryption.rs  error.rs  future.rs  identities.rs  libolm_migration.rs  machine.rs  qr_login.rs  requests.rs  responses.rs  store.rs  tracing.rs  types.rs  verification.rs
src/vodozemac/: ecies.rs  hpke.rs  mod.rs  pk_encryption.rs
tests/: dehydrated_devices.test.ts  device.test.js  encryption.test.ts  helper.js  helper.ts  hpke.test.ts  machine.test.ts  qr_code.test.js  shared_room_history.test.ts
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/snapshots/: xtask__tests__update_cargo_toml_from_git_rev.snap  xtask__tests__update_cargo_toml_from_release.snap
